# MuKOB

./: .gitattributes  .gitignore  3RD-PARTY-LICENSE  CMakeLists.txt  LICENSE  MuKOB.c  MuKOB.code-workspace  README.md
component-docs/: README.md
component-docs/FTDI/: USB to Serial Cable for MKOB-MorseKOB.txt
component-docs/QDTech-TFT-LCD-Touch-Display-w_SD/: README.md
component-docs/VGA-Color-Info/: VGA16-RGB.rtf
docs/: Example-Sounder_Voltage_Loop-Resistor.txt  Functional.md  MuKOB-theme.yml  Pico-W-Pins.md  Ref-Manual-KSIF-MkIII.adoc  Ref-Manual-KSIF-MkV.adoc  Ulitmatic-Keying.txt  User Manual.docx  makefile  man_settings.adoc
hw/: #auto_saved_files#  MK-CommAdapter.kicad_pcb  MK-CommAdapter.kicad_prl  MK-CommAdapter.kicad_pro  MK-CommAdapter.kicad_sch  MK-JackAdapter.kicad_pcb  MK-JackAdapter.kicad_prl  MK-JackAdapter.kicad_pro  MK-JackAdapter.kicad_sch  MK-KS-MkII.kicad_pcb  MK-KS-MkII.kicad_prl  MK-KS-MkII.kicad_pro  MK-KS-MkII.kicad_sch  MK-KS-MkIII.kicad_pcb  MK-KS-MkIII.kicad_prl  MK-KS-MkIII.kicad_pro  MK-KS-MkIII.kicad_sch  MK-KS-MkIV.kicad_pcb  MK-KS-MkIV.kicad_prl  MK-KS-MkIV.kicad_pro  MK-KS-MkIV.kicad_pro.kicad_pcb  MK-KS-MkIV.kicad_pro.kicad_prl  MK-KS-MkIV.kicad_pro.kicad_pro  MK-KS-MkIV.kicad_pro.kicad_sch  MK-KS-MkV.kicad_pcb  MK-KS-MkV.kicad_prl  MK-KS-MkV.kicad_pro  MK-KS-MkV.kicad_sch  MK-KS.csv  MK-KS.kicad_pcb  MK-KS.kicad_prl  MK-KS.kicad_pro  MK-KS.kicad_sch  MK-KS.xml  MK-UI.kicad_prl  MK-UI.kicad_pro  MK_KS.kicad_pcb  MK_KS.kicad_prl  MK_KS.kicad_pro  MK_KS.kicad_sch  (+19 more)
hw/bom/: IF-MkIV Costed BOM.xlsx  IF-MkV Costed BOM.xlsx  MK-KS-MkIV-1.0-ibom.html  MK-KS-MkIV.kicad_pro-1.0-n-ibom.html  MK-KS-MkV-1.0-ibom.html  MK-KS-MkV-1.0-n-ibom.html  MuKOB-1.0b-ibom.html  MuKOB-KS.csv  MuKOB-KS_ibom.html  ibom.html
hw/dxf/: Altoid-Bottom-Outline.dxf  MK-IF-MkV-Faceplate.dxf  MK-IF-MkV-Faceplate_2-0.dxf  MK-IF-MkV-Insulator.dxf  MK-IF-MkV-PCB-Outline.dxf
hw/gerbers/mk_ks/: MK_KS-B_Cu.gbr  MK_KS-B_Mask.gbr  MK_KS-B_Paste.gbr  MK_KS-B_Silkscreen.gbr  MK_KS-Edge_Cuts.gbr  MK_KS-F_Cu.gbr  MK_KS-F_Mask.gbr  MK_KS-F_Paste.gbr  MK_KS-F_Silkscreen.gbr  MK_KS-NPTH-drl.gbr  MK_KS-PTH-drl.gbr  MK_KS-job.gbrjob
hw/gerbers/mk_ks_II/: MK-KS-MkIII-B_Cu.gbr  MK-KS-MkIII-B_Mask.gbr  MK-KS-MkIII-B_Paste.gbr  MK-KS-MkIII-B_Silkscreen.gbr  MK-KS-MkIII-Edge_Cuts.gbr  MK-KS-MkIII-F_Cu.gbr  MK-KS-MkIII-F_Mask.gbr  MK-KS-MkIII-F_Paste.gbr  MK-KS-MkIII-F_Silkscreen.gbr  MK-KS-MkIII-job.gbrjob
hw/gerbers/mk_ks_mkII/: MK-KS-MkII-B_Cu.gbr  MK-KS-MkII-B_Mask.gbr  MK-KS-MkII-B_Paste.gbr  MK-KS-MkII-B_Silkscreen.gbr  MK-KS-MkII-Edge_Cuts.gbr  MK-KS-MkII-F_Cu.gbr  MK-KS-MkII-F_Mask.gbr  MK-KS-MkII-F_Paste.gbr  MK-KS-MkII-F_Silkscreen.gbr  MK-KS-MkII-NPTH-drl.gbr  MK-KS-MkII-PTH-drl.gbr  MK-KS-MkII-job.gbrjob
hw/gerbers/mk_ks_mkIII/: MK-KS-MkIII-B_Cu.gbr  MK-KS-MkIII-B_Mask.gbr  MK-KS-MkIII-B_Paste.gbr  MK-KS-MkIII-B_Silkscreen.gbr  MK-KS-MkIII-Edge_Cuts.gbr  MK-KS-MkIII-F_Cu.gbr  MK-KS-MkIII-F_Mask.gbr  MK-KS-MkIII-F_Paste.gbr  MK-KS-MkIII-F_Silkscreen.gbr  MK-KS-MkIII-NPTH-drl.gbr  MK-KS-MkIII-PTH-drl.gbr  MK-KS-MkIII-job.gbrjob
hw/gerbers/mk_ks_mkIV/: MK-KS-MkIV.kicad_pro-B_Cu.gbr  MK-KS-MkIV.kicad_pro-B_Mask.gbr  MK-KS-MkIV.kicad_pro-B_Paste.gbr  MK-KS-MkIV.kicad_pro-B_Silkscreen.gbr  (+8 more)
hw/libraries/: CUI_DEVICES_SJ-2524-SMT-TR.step  CUI_DEVICES_SJ-43516-SMT-TR.step  CUI_DEVICES_SJ-63063B.step  CUI_DEVICES_TS04-66-50-BK-160-SMT.step  PEC12R-4025F-S0024.step
hw/parts_lists/: MK-KS-MkII.csv  MK-KS-MkII.xml  MK-KS.csv  MK-KS.xml  MuKOB.csv  MuKOB.xml
hw/step/: MK-KS.step  MuKOB.step
lib/: CMakeLists.txt
lib/display/: CMakeLists.txt  display.c  display.h  font.c  font.h
lib/oled1306_i2c/: CMakeLists.txt  README.adoc  font.c  font9.c  oled1306_i2c.c  oled1306_i2c.h
lib/rotory_encoder/: CMakeLists.txt
src/: CMakeLists.txt  MuKOB.c  debugging.c  debugging.h  lwipopts.h  memmap_mukob_custom.ld  mkboard.c  mkboard.h  mkdebug.c  mkdebug.h  mukboard.c  mukboard.h  spi_ops.c  spi_ops.h  system_defs.h
src/be/: CMakeLists.txt  be.c  be.h
src/cmt/: CMakeLists.txt  cmt.c  cmt.h  core1_main.c  core1_main.h  multicore.c  multicore.h
src/config/: CMakeLists.txt  config.c  config.h  config_fops.c  config_fops.h  mukob.sample.cfg  mukob.sys.sample.cfg  mukob_sample.cfg
src/data/: CMakeLists.txt  morse_tables.c  morse_tables.h
src/gfx/: CMakeLists.txt  gfx.c  gfx.h
src/kob/: CMakeLists.txt  kob.c  kob.h  kob_t.h
src/lib/oled1306_i2c/: CMakeLists.txt  oled1306_i2c.h
src/lib/sd_card/: CMakeLists.txt
src/lib/sd_card/include/: util.h
src/lib/sd_card/sd_driver/: hw_config.c  sd_card.c
src/lib/sd_card/src/: my_debug.c
src/mks/: CMakeLists.txt  mks.c  mks.h
src/morse/: CMakeLists.txt  morse.c  morse.h
src/net/: CMakeLists.txt  mkwire.c  mkwire.h  net.c  net.h
src/test/: CMakeLists.txt  test.c  test.h
src/ui/: CMakeLists.txt  ui.c  ui.h  ui_disp.c  ui_disp.h  ui_term.c  ui_term.h
src/ui/cmd/: CMakeLists.txt  cmd.c  cmd.h  cmd_t.h
src/ui/display/: CMakeLists.txt  display.c  display.h  display_i.h  font.h  font_10_16.c  font_10_16.h  font_9_10_h.c  ili9341_spi.c  ili9341_spi.h  touch.c  touch.h
src/ui/display/ili9341_spi/: CMakeLists.txt  display_ili9341.c  display_ili9341.h  font_10_16.c  font_10_16.h  font_10_16.sav.c  ili9341_spi.c  ili9341_spi.h
src/ui/display/ili_lcd_spi/: CMakeLists.txt  display_ili.c  display_ili.h  ili_lcd_spi.c  ili_lcd_spi.h
src/ui/display/ili_lcd_spi/ili9341_spi/: CMakeLists.txt  ili9341_spi.c  ili9341_spi.h
src/ui/display/ili_lcd_spi/ili9488_spi/: CMakeLists.txt  ili9488_spi.c  ili9488_spi.h
src/ui/display/oled1306_i2c/: CMakeLists.txt  display_oled1306.c  display_oled1306.h  font_9_10_h.c  font_9_10_h.h  img_to_array.py  oled1306_i2c.c  oled1306_i2c.h
src/ui/rotary_encoder/: CMakeLists.txt  re_pbsw.c  re_pbsw.h  rotary_encoder.c  rotary_encoder.h
src/ui/rotory_encoder/: CMakeLists.txt  re_pbsw.c  re_pbsw.h  rotory_encoder.c  rotory_encoder.h
src/ui/term/: CMakeLists.txt  term.c  term.h
src/util/: CMakeLists.txt  util.c  util.h
src/wire/: CMakeLists.txt  mkwire.c  mkwire.h  net.c  net.h
(+59 files in other folders)
